@@ -1,5 +1,5 @@
 QPKG_NAME="HideThatBanner"
-QPKG_VER="180326"
+QPKG_VER="180328"
 QPKG_AUTHOR="OneCD"
 QPKG_SUMMARY="Hides the QTS App Center rotating banner"
 QPKG_RC_NUM="100"
